Bug 1407007 - Fix RTL alignment of search icon. r=dao
MozReview-Commit-ID: BT8ZVOIPQND

UltraBlame original commit: 2f5f7289c2d5a1f7ab3e592cb7900a9217a21970

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -3054,6 +3054,55 @@ searchbar
 search
 -
 button
+[
+addengines
+=
+true
+]
+>
+.
+searchbar
+-
+search
+-
+icon
+-
+overlay
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+margin
+-
+inline
+-
+start
+:
+-
+25px
+;
+margin
+-
+inline
+-
+end
+:
+14px
+;
+}
+.
+searchbar
+-
+search
+-
+button
 :
 hover
 :
@@ -3135,5 +3184,60 @@ width
 height
 :
 6px
+;
+}
+.
+searchbar
+-
+search
+-
+button
+:
+hover
+:
+not
+(
+[
+addengines
+=
+true
+]
+)
+>
+.
+searchbar
+-
+search
+-
+icon
+-
+overlay
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+margin
+-
+inline
+-
+start
+:
+-
+26px
+;
+margin
+-
+inline
+-
+end
+:
+20px
 ;
 }
